# ESP32_S3_Miao

./: CMakeLists.txt  README.md  partitions_audio.csv  sdkconfig  sdkconfig.old
components/k_funcs/: CMakeLists.txt  codecFuc.c  codecFuc.h  kbut.c  kbut.h  utilities.h
main/: idf_component.yml  main.c
