idf_component_register(
    SRCS
        "codecFuc.c"
        "kbut.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp_driver_gpio
        esp_driver_i2c
        esp_driver_i2s
        esp_driver_ledc
        esp_driver_uart
        esp_codec_dev
        spiffs
        esp_ringbuf
        spiffs
)
